Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AGameMode.h

	DOTNET_EXPORT auto E_PROP_AGameMode_MinRespawnDelay_GET(AGameMode* Ptr) { return Ptr->MinRespawnDelay; }
	DOTNET_EXPORT void E_PROP_AGameMode_MinRespawnDelay_SET(AGameMode* Ptr, float Value) { Ptr->MinRespawnDelay = Value; }
	
	DOTNET_EXPORT auto E_PROP_AGameMode_NumBots_GET(AGameMode* Ptr) { return Ptr->NumBots; }
	DOTNET_EXPORT void E_PROP_AGameMode_NumBots_SET(AGameMode* Ptr, int32 Value) { Ptr->NumBots = Value; }
	
	DOTNET_EXPORT auto E_PROP_AGameMode_NumPlayers_GET(AGameMode* Ptr) { return Ptr->NumPlayers; }
	DOTNET_EXPORT void E_PROP_AGameMode_NumPlayers_SET(AGameMode* Ptr, int32 Value) { Ptr->NumPlayers = Value; }
	
	DOTNET_EXPORT auto E_PROP_AGameMode_NumSpectators_GET(AGameMode* Ptr) { return Ptr->NumSpectators; }
	DOTNET_EXPORT void E_PROP_AGameMode_NumSpectators_SET(AGameMode* Ptr, int32 Value) { Ptr->NumSpectators = Value; }
	
	DOTNET_EXPORT auto E_PROP_AGameMode_NumTravellingPlayers_GET(AGameMode* Ptr) { return Ptr->NumTravellingPlayers; }
	DOTNET_EXPORT void E_PROP_AGameMode_NumTravellingPlayers_SET(AGameMode* Ptr, int32 Value) { Ptr->NumTravellingPlayers = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_AGameMode(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<AGameMode>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_AGameMode_AbortMatch(AGameMode* Self)
	{
		Self->AGameMode::AbortMatch();
	}
	DOTNET_EXPORT auto E_AGameMode_AddInactivePlayer(AGameMode* Self, APlayerState* PlayerState, APlayerController* PC)
	{
		auto _p0 = PlayerState;
		auto _p1 = PC;
		Self->AGameMode::AddInactivePlayer(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AGameMode_Broadcast(AGameMode* Self, AActor* Sender, char* Msg, char* Type)
	{
		auto _p0 = Sender;
		auto _p1 = ConvertFromManage_FString(Msg);
		auto _p2 = ConvertFromManage_FName(Type);
		Self->AGameMode::Broadcast(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AGameMode_EndMatch(AGameMode* Self)
	{
		Self->AGameMode::EndMatch();
	}
	DOTNET_EXPORT auto E_AGameMode_FindInactivePlayer(AGameMode* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		return Self->FindInactivePlayer(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_GetDefaultGameClassPath(AGameMode* Self, char* MapName, char* Options, char* Portal)
	{
		auto _p0 = ConvertFromManage_FString(MapName);
		auto _p1 = ConvertFromManage_FString(Options);
		auto _p2 = ConvertFromManage_FString(Portal);
		return ConvertToManage_StringWrapper(Self->GetDefaultGameClassPath(_p0, _p1, _p2));
	}
	DOTNET_EXPORT auto E_AGameMode_GetMatchState(AGameMode* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetMatchState());
	}
	DOTNET_EXPORT auto E_AGameMode_GetNetworkNumber(AGameMode* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetNetworkNumber());
	}
	DOTNET_EXPORT auto E_AGameMode_GetTravelType(AGameMode* Self)
	{
		return Self->GetTravelType();
	}
	DOTNET_EXPORT auto E_AGameMode_HandleLeavingMap(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::HandleLeavingMap_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_HandleMatchAborted(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::HandleMatchAborted_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_HandleMatchHasEnded(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::HandleMatchHasEnded_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_HandleMatchHasStarted(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::HandleMatchHasStarted_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_HandleMatchIsWaitingToStart(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::HandleMatchIsWaitingToStart_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_HasMatchEnded(AGameMode* Self)
	{
		return Self->HasMatchEnded();
	}
	DOTNET_EXPORT auto E_AGameMode_IsMatchInProgress(AGameMode* Self)
	{
		return Self->IsMatchInProgress();
	}
	DOTNET_EXPORT auto E_AGameMode_K2_OnSetMatchState(AGameMode* Self, char* NewState)
	{
		auto _p0 = ConvertFromManage_FName(NewState);
		((E_PROTECTED_WRAP_AGameMode*)Self)->K2_OnSetMatchState_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_MatineeCancelled(AGameMode* Self)
	{
		Self->AGameMode::MatineeCancelled();
	}
	DOTNET_EXPORT auto E_AGameMode_OnMatchStateSet(AGameMode* Self)
	{
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::OnMatchStateSet_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_OverridePlayerState(AGameMode* Self, APlayerController* PC, APlayerState* OldPlayerState)
	{
		auto _p0 = PC;
		auto _p1 = OldPlayerState;
		Self->AGameMode::OverridePlayerState(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AGameMode_PlayerSwitchedToSpectatorOnly(AGameMode* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->PlayerSwitchedToSpectatorOnly(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_PostCommitMapChange(AGameMode* Self)
	{
		Self->AGameMode::PostCommitMapChange();
	}
	DOTNET_EXPORT auto E_AGameMode_PreCommitMapChange(AGameMode* Self, char* PreviousMapName, char* NextMapName)
	{
		auto _p0 = ConvertFromManage_FString(PreviousMapName);
		auto _p1 = ConvertFromManage_FString(NextMapName);
		Self->AGameMode::PreCommitMapChange(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AGameMode_ReadyToEndMatch(AGameMode* Self)
	{
		return ((E_PROTECTED_WRAP_AGameMode*)Self)->ReadyToEndMatch_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_ReadyToStartMatch(AGameMode* Self)
	{
		return ((E_PROTECTED_WRAP_AGameMode*)Self)->ReadyToStartMatch_WRAP();
	}
	DOTNET_EXPORT auto E_AGameMode_RemovePlayerControllerFromPlayerCount(AGameMode* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->RemovePlayerControllerFromPlayerCount(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_RestartGame(AGameMode* Self)
	{
		Self->AGameMode::RestartGame();
	}
	DOTNET_EXPORT auto E_AGameMode_Say(AGameMode* Self, char* Msg)
	{
		auto _p0 = ConvertFromManage_FString(Msg);
		Self->AGameMode::Say(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_SendPlayer(AGameMode* Self, APlayerController* aPlayer, char* URL)
	{
		auto _p0 = aPlayer;
		auto _p1 = ConvertFromManage_FString(URL);
		Self->AGameMode::SendPlayer(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AGameMode_SetBandwidthLimit(AGameMode* Self, float AsyncIOBandwidthLimit)
	{
		auto _p0 = AsyncIOBandwidthLimit;
		Self->AGameMode::SetBandwidthLimit(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_SetMatchState(AGameMode* Self, char* NewState)
	{
		auto _p0 = ConvertFromManage_FName(NewState);
		((E_PROTECTED_WRAP_AGameMode*)Self)->AGameMode::SetMatchState_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_SetSeamlessTravelViewTarget(AGameMode* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->AGameMode::SetSeamlessTravelViewTarget(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_StartMatch(AGameMode* Self)
	{
		Self->AGameMode::StartMatch();
	}
	DOTNET_EXPORT auto E_AGameMode_StartNewPlayer(AGameMode* Self, APlayerController* NewPlayer)
	{
		auto _p0 = NewPlayer;
		Self->AGameMode::StartNewPlayer(_p0);
	}
	DOTNET_EXPORT auto E_AGameMode_StaticGetFullGameClassName(AGameMode* Self, char* Str)
	{
		auto _p0 = ConvertFromManage_FString(Str);
		return ConvertToManage_StringWrapper(Self->StaticGetFullGameClassName(_p0));
	}