Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/AGameMode.cs

// This file was created automatically, do not modify the contents of this file.

// ReSharper disable InvalidXmlDocComment
// ReSharper disable InconsistentNaming
// ReSharper disable CheckNamespace
// ReSharper disable MemberCanBePrivate.Global

using System;
using System.Runtime.InteropServices;

// Source file C:\Program Files\Epic Games\UE_4.22\Engine\Source\Runtime\Engine\Classes\GameFramework\GameMode.h:35

namespace UnrealEngine
{
	public  partial class AGameMode : AGameModeBase
	{
		public AGameMode(IntPtr adress)
			: base(adress)
		{
		}

		public AGameMode(UObject Parent = null, string Name = "GameMode")
			: base(IntPtr.Zero)
		{
			NativePointer = E_NewObject_AGameMode(Parent, Name);
			NativeManager.AddNativeWrapper(NativePointer, this);
		}

		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern float E_PROP_AGameMode_MinRespawnDelay_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AGameMode_MinRespawnDelay_SET(IntPtr Ptr, float Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_AGameMode_NumBots_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AGameMode_NumBots_SET(IntPtr Ptr, int Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_AGameMode_NumPlayers_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AGameMode_NumPlayers_SET(IntPtr Ptr, int Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_AGameMode_NumSpectators_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AGameMode_NumSpectators_SET(IntPtr Ptr, int Value);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern int E_PROP_AGameMode_NumTravellingPlayers_GET(IntPtr Ptr);
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_PROP_AGameMode_NumTravellingPlayers_SET(IntPtr Ptr, int Value);
		
		#region DLLInmport
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern IntPtr E_NewObject_AGameMode(IntPtr Parent, string Name);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_AbortMatch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_AddInactivePlayer(IntPtr self, IntPtr playerState, IntPtr pC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_Broadcast(IntPtr self, IntPtr sender, string msg, string type);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_EndMatch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_FindInactivePlayer(IntPtr self, IntPtr pC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_AGameMode_GetDefaultGameClassPath(IntPtr self, string mapName, string options, string portal);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_AGameMode_GetMatchState(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_AGameMode_GetNetworkNumber(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_GetTravelType(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_HandleLeavingMap(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_HandleMatchAborted(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_HandleMatchHasEnded(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_HandleMatchHasStarted(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_HandleMatchIsWaitingToStart(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_HasMatchEnded(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_IsMatchInProgress(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_K2_OnSetMatchState(IntPtr self, string newState);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_MatineeCancelled(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_OnMatchStateSet(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_OverridePlayerState(IntPtr self, IntPtr pC, IntPtr oldPlayerState);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_PlayerSwitchedToSpectatorOnly(IntPtr self, IntPtr pC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_PostCommitMapChange(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_PreCommitMapChange(IntPtr self, string previousMapName, string nextMapName);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_ReadyToEndMatch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern bool E_AGameMode_ReadyToStartMatch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_RemovePlayerControllerFromPlayerCount(IntPtr self, IntPtr pC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_RestartGame(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_Say(IntPtr self, string msg);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_SendPlayer(IntPtr self, IntPtr aPlayer, string uRL);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_SetBandwidthLimit(IntPtr self, float asyncIOBandwidthLimit);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_SetMatchState(IntPtr self, string newState);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_SetSeamlessTravelViewTarget(IntPtr self, IntPtr pC);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_StartMatch(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_AGameMode_StartNewPlayer(IntPtr self, IntPtr newPlayer);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern StringWrapper E_AGameMode_StaticGetFullGameClassName(IntPtr self, string str);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// Minimum time before player can respawn after dying.
		/// </summary>
		public float MinimumRespawnDelay
		{
			get => E_PROP_AGameMode_MinRespawnDelay_GET(NativePointer);
			set => E_PROP_AGameMode_MinRespawnDelay_SET(NativePointer, value);
		}

		
		/// <summary>
		/// number of non-human players (AI controlled but participating as a player).
		/// </summary>
		public int NumBots
		{
			get => E_PROP_AGameMode_NumBots_GET(NativePointer);
			set => E_PROP_AGameMode_NumBots_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Current number of human players.
		/// </summary>
		public int NumPlayers
		{
			get => E_PROP_AGameMode_NumPlayers_GET(NativePointer);
			set => E_PROP_AGameMode_NumPlayers_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Current number of spectators.
		/// </summary>
		public int NumSpectators
		{
			get => E_PROP_AGameMode_NumSpectators_GET(NativePointer);
			set => E_PROP_AGameMode_NumSpectators_SET(NativePointer, value);
		}

		
		/// <summary>
		/// Number of players that are still traveling from a previous map
		/// </summary>
		public int NumTravellingPlayers
		{
			get => E_PROP_AGameMode_NumTravellingPlayers_GET(NativePointer);
			set => E_PROP_AGameMode_NumTravellingPlayers_SET(NativePointer, value);
		}

		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// Report that a match has failed due to unrecoverable error
		/// </summary>
		public virtual void AbortMatch()
			=> E_AGameMode_AbortMatch(this);
		
		
		/// <summary>
		/// Add PlayerState to the inactive list, remove from the active list
		/// </summary>
		public virtual void AddInactivePlayer(APlayerState playerState, APlayerController pC)
			=> E_AGameMode_AddInactivePlayer(this, playerState, pC);
		
		
		/// <summary>
		/// Broadcast a string to all players.
		/// </summary>
		public virtual void Broadcast(AActor sender, string msg, string type)
			=> E_AGameMode_Broadcast(this, sender, msg, type);
		
		
		/// <summary>
		/// Transition from InProgress to WaitingPostMatch. You can call this manually, will also get called if ReadyToEndMatch returns true
		/// </summary>
		public virtual void EndMatch()
			=> E_AGameMode_EndMatch(this);
		
		
		/// <summary>
		/// Attempt to find and associate an inactive PlayerState with entering PC.
		/// <para>@Returns true if a PlayerState was found and associated with PC. </para>
		/// </summary>
		public virtual bool FindInactivePlayer(APlayerController pC)
			=> E_AGameMode_FindInactivePlayer(this, pC);
		
		public virtual string GetDefaultGameClassPath(string mapName, string options, string portal)
			=> E_AGameMode_GetDefaultGameClassPath(this, mapName, options, portal);
		
